--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Enviroment
+.env
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
