--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm-run-all -p server:*",
     "server:1": "nodemon server1/server.js",
-    "server:2": "nodemon server2/server.js"
+    "server:2": "nodemon server2/server.js",
+    "monitor": "node monitor/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,9 +27,12 @@
   "homepage": "https://github.com/MatheusFerreira71/ligacaoComNodeJs#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "npm-run-all": "^4.1.5"
+    "dotenv": "^8.2.0",
+    "npm-run-all": "^4.1.5",
+    "totalvoice-node": "^1.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.0",
+    "sucrase": "^3.10.1"
   }
 }
